# FFmpegSample

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/loften/ffmpegsample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: decode-audio.cpp  decode-video.cpp  ffmpeg-lib.cpp  live555-lib.cpp  testRTSPClient.cpp  testRTSPClient.h
app/src/main/java/com/loften/ffmpegsample/: MainActivity.java
app/src/main/java/com/loften/ffmpegsample/decodeaudio/: DecodeAudioActivity.java
app/src/main/java/com/loften/ffmpegsample/decodevideo/: DecodeVideoActivity.java
app/src/main/java/com/loften/ffmpegsample/ffmpeglib/: MainFFmpeg.java
app/src/main/java/com/loften/ffmpegsample/live555/: MainLive555.java  TestLive555Activity.java
app/src/main/java/com/loften/ffmpegsample/video/: IVideoProvider.java  VideoActivity.java  VideoAdapter.java  VideoInfo.java  VideoProvider.java
app/src/main/res/layout/: activity_decode_audio.xml  activity_decode_video.xml  activity_main.xml  activity_video.xml  item_video.xml  toolbar.xml
app/src/test/java/com/loften/ffmpegsample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
